# gitkraken

./: Python para el análisis de datos.docx  README.md  main.py  memoria.docx  pyproject.toml  ~$thon para el análisis de datos.docx
kraken/: main.py
kraken/api/: kraken_api.py
models/: kraken_api.py  trading_pair.py
tests/: test_trading_pair.py
